Cleaned the column language

--- a/imdb movie cleaning.ipynb
+++ b/imdb movie cleaning.ipynb
@@ -2122,6 +2122,147 @@
     "mv['country'] = mv['country'].str.split(',').str[0]\n",
     "mv[['country']].sample(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Column: [Language]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'English', 'Italian', ..., 'Persian, Urdu',\n",
+       "       'English, Swiss German, German',\n",
+       "       'English, Polish, Russian, German'], dtype=object)"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the data type for the column language\n",
+    "mv['language'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>language</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77217</th>\n",
+       "      <td>French</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1142</th>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25033</th>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12081</th>\n",
+       "      <td>German</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64085</th>\n",
+       "      <td>Serbian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37803</th>\n",
+       "      <td>Hindi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81041</th>\n",
+       "      <td>Arabic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43217</th>\n",
+       "      <td>Norwegian, Swedish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24268</th>\n",
+       "      <td>Irish, English</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 language\n",
+       "49998             English\n",
+       "77217              French\n",
+       "1142              English\n",
+       "25033             English\n",
+       "12081              German\n",
+       "64085             Serbian\n",
+       "37803               Hindi\n",
+       "81041              Arabic\n",
+       "43217  Norwegian, Swedish\n",
+       "24268      Irish, English"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fill the missing values with 'Not Available' \n",
+    "mv['language'] = mv['language'].fillna('Not Available')\n",
+    "mv[['language']].sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
